<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/order_textview"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name_label"
        app:layout_constraintTop_toBottomOf="@+id/order_textview"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/text_name"
        android:layout_marginTop="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/name_label"
        app:layout_constraintTop_toBottomOf="@+id/order_textview"
        android:id="@+id/name_text"
        android:inputType="textPersonName"
        android:hint="@string/hint_text_name"
        app:layout_constraintBaseline_toBaselineOf="@+id/name_label"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:ems="10"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/address_label"
        app:layout_constraintTop_toBottomOf="@+id/name_label"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/text_address"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/name_label"
        app:layout_constraintStart_toEndOf="@+id/address_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/address_label"
        android:hint="@string/hint_text_address"
        android:ems="10"
        android:inputType="textMultiLine"
        android:id="@+id/address_text"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/address_label"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/text_phone"
        android:id="@+id/phone_label"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/address_label"
        app:layout_constraintStart_toEndOf="@id/phone_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/phone_label"
        android:ems="10"
        android:hint="@string/hint_text_phone"
        android:inputType="phone"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:id="@+id/phone_text"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/phone_label"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/text_note"
        android:id="@+id/note_label"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/note_label"
        android:hint="@string/hint_text_note"
        app:layout_constraintBaseline_toBaselineOf="@+id/note_label"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:id="@+id/note_text"
        android:inputType="textMultiLine|textCapSentences"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/delivery_label"
        app:layout_constraintTop_toBottomOf="@id/note_label"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/text_delivery"
        android:textSize="18sp"/>
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delivery_label">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sameday"
            android:onClick="onRadioButtonClicked"
            android:text="@string/text_same_day"/>
        <RadioButton
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nextday"
            android:onClick="onRadioButtonClicked"
            android:text="@string/text_next_day" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pickup"
            android:onClick="onRadioButtonClicked"
            android:text="@string/text_pickup"/>
    </RadioGroup>
    <Spinner
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/address_label"
        app:layout_constraintStart_toEndOf="@+id/phone_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        android:id="@+id/label_spiner"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/text_date"
        android:id="@+id/buttonDate"/>
</androidx.constraintlayout.widget.ConstraintLayout>